[package]
name = "candle-llm"
version = "0.0.0"
edition = "2021"
description = "On-device text LLM serving engine for the Candle backend (cross-platform incl. Windows/CUDA); validates the core-llm contract. Work in progress."
license = "Apache-2.0"
repository = "https://github.com/SceneWorks/candle-llm"
readme = "README.md"
keywords = ["candle", "cuda", "llm", "inference", "serving"]
categories = ["science"]

[dependencies]
# The Candle tensor backend. Pinned to the SAME git rev the `candle-gen` sibling family pins
# (huggingface/candle post-0.10.2) so the whole on-device stack resolves ONE candle build — and
# because that rev clears `CUDA_ERROR_INVALID_PTX` on Blackwell (sm_120). CPU by default; the
# `cuda` / `metal` features select a GPU backend. Re-pin in lockstep with candle-gen.
candle-core = { git = "https://github.com/huggingface/candle", rev = "65ecb58c11d2244a7e60c71bdcdb19b15b0a4343" }
candle-nn = { git = "https://github.com/huggingface/candle", rev = "65ecb58c11d2244a7e60c71bdcdb19b15b0a4343" }
# Fused FlashAttention-2 CUDA kernels for the decode/prefill attention seam. Optional — pulled in
# ONLY by the `flash-attn` feature (it compiles a large CUDA/CUTLASS kernel set and needs the CUDA
# toolkit). Pinned to the SAME candle git rev so it links against one candle build.
candle-flash-attn = { git = "https://github.com/huggingface/candle", rev = "65ecb58c11d2244a7e60c71bdcdb19b15b0a4343", optional = true }
# The backend-neutral contract this crate implements (epic 7153, story 7154). Git dep on the
# published repo during development (crates.io publish coordination is a later story); shares its
# `CancelFlag`, `Tokenizer`, chat templates, and the `TextLlm` trait so there is one contract, not
# two. candle-llm is the second backend, whose passing the conformance suite de-provisionalizes it.
# Pinned to an explicit rev (NOT `branch = "main"`): a floating branch lets any `cargo update` re-
# resolve core-llm to main HEAD and re-break the build org-wide (sc-8021). This rev carries the
# Qwen3-VL contract additions (`Content::Video`, `supports_video`, `weightless_vision`; sc-8077/8081)
# that candle-llm is compile-compatible with (sc-8177). Re-pin in lockstep with the other consumers.
core-llm = { git = "https://github.com/SceneWorks/core-llm", rev = "3870ed1" }
# Link-time provider registration into core-llm's registry. Must be the same major as core-llm's
# inventory so the distributed slice links.
inventory = "0.3"
# Error plumbing for the engine surface.
thiserror = "2"
# config.json parsing (HF model configs) — Value-based, no derive, matching the mlx-llm convention.
serde_json = "1"

[dev-dependencies]
# The contract conformance suite (story 7201): run the registered LlamaProvider through the
# backend-neutral checks. Same git source AND rev as the core-llm dep so cargo unifies on one core-llm.
core-llm-testkit = { git = "https://github.com/SceneWorks/core-llm", rev = "3870ed1" }

[features]
# Default works with NO extra features: candle-core defaults to the CPU backend (builds anywhere).
default = []
# NVIDIA CUDA backend (the Windows target). MUST NOT be in `default` — it needs the CUDA toolkit.
cuda = ["candle-core/cuda", "candle-nn/cuda"]
# Apple Metal GPU backend.
metal = ["candle-core/metal", "candle-nn/metal"]
# FlashAttention-2 (Windows/CUDA). Implies `cuda` and pulls in `candle-flash-attn`'s fused kernels,
# which the attention seam (`primitives::attention::sdpa`) dispatches to for the dense causal path,
# falling back to the eager softmax SDPA for the cases the kernel can't serve (soft-cap, mismatched
# q/v head dims, padded-batch masks, f32/CPU). NOTE: candle-flash-attn ships sm80 kernels.
flash-attn = ["cuda", "dep:candle-flash-attn"]
