[package]
name = "mlx-gen"
version = "0.0.0"
edition = "2021"
description = "Rust-native generative image & video model inference on Apple MLX (work in progress; name reserved)."
license = "Apache-2.0"
repository = "https://github.com/michaeltrefry/mlx-gen"
keywords = ["mlx", "apple-silicon", "diffusion", "inference", "generative"]
categories = ["science"]
readme = "README.md"

[dependencies]
