[package]
name = "candle-audio-catalog"
version = "0.0.0"
edition = "2021"
description = "Explicit complete provider catalog for the SceneWorks Candle audio lane — the audio composition root every runtime bundle's audio section consumes."
license = "Apache-2.0"
repository = "https://github.com/SceneWorks/inference"

[dependencies]
# Family core crate — re-exports gen_core + candle, so every audio provider links exactly one
# gen-core / candle build (the same single-resolution discipline as candle-gen-catalog).
candle-audio = { path = "../candle-audio" }
# Audio provider crates, in catalog order (sc-12836: Kokoro TTS; sc-12841: MOSS-SoundEffect
# SFX/ambience; sc-12844: Chatterbox voice encoder — a VoiceEmbedder, not a generator).
candle-audio-kokoro = { path = "../candle-audio-kokoro" }
candle-audio-moss-sfx = { path = "../candle-audio-moss-sfx" }
candle-audio-chatterbox-ve = { path = "../candle-audio-chatterbox-ve" }
# The audio lane's snapshot-preparer composition (sc-12836): the lane's single `candle`
# registration recognizes audio snapshots and delegates everything else to candle-llm's
# preparer unchanged. This crate is the composition owner (previously each bundle wired
# candle-llm's registry into the lane directly); candle-llm re-exports `core_llm` so the
# preparer contract types resolve to one package.
candle-llm = { workspace = true }

[features]
default = []
# Pass the backend selection through so a bundle's `--features metal`/`cuda` on this catalog
# selects the matching candle backend across the whole audio family (mirrors candle-gen-catalog).
metal = [
    "candle-audio/metal",
    "candle-audio-kokoro/metal",
    "candle-audio-moss-sfx/metal",
    "candle-audio-chatterbox-ve/metal",
]
cuda = [
    "candle-audio/cuda",
    "candle-audio-kokoro/cuda",
    "candle-audio-moss-sfx/cuda",
    "candle-audio-chatterbox-ve/cuda",
]
